# GPU_programming

./: pyproject.toml
scripts/: kernel_code.cl  run.py
